修改了Type对象的结构,以便更合理的处理. 但对象是引用是还没有处理好
git-svn-id: svn://localhost/noc/trunk@75 626f0353-5094-f44b-bd95-4260a488012d

--- a/noc_site/WebContent/default.htm
+++ b/noc_site/WebContent/default.htm
@@ -1,31 +1,9 @@
-<html>
-
-<head>
-<style>
-frameset,frame {
-	border-width: 0px;
-}
-
-</style>
-</head>
-<body>
-<FRAMESET cols="21%,78%" style="border:0;">
- 
-<FRAMESET rows="90%,10%" title="" > 
-<FRAME src="/noc/noc/lang/reflect/Type/?menu" name="oMenu" title="Menu"/> 
-<FRAME src="list.jsp" name="oList" title="List"/> 
+<HTML>
+<FRAMESET cols="21%,78%" style="border:0;"> 
+	<FRAMESET rows="90%,10%" title="" > 
+		<FRAME src="/noc/noc/lang/reflect/Type/?menu" name="oMenu" title="Menu"/> 
+		<FRAME src="list.jsp" name="oList" title="List"/> 
+	</FRAMESET> 
+	<FRAME src="about:blank" name="oEdit" title="edit" scrolling="yes"/> 
 </FRAMESET> 
-<FRAME src="about:blank" name="oEdit" title="edit" scrolling="yes"/> 
-<NOFRAMES> 
-<h2> 
-Frame Alert</h2> 
- 
-<p /> 
-This document is designed to be viewed using the frames feature. If you see this message, you are using a non-frame-capable web client.
-<br /> 
-Link to<a href="overview-summary.html">Non-frame version.</a> 
-</NOFRAMES> 
-</FRAMESET> 
-
-</body>
-</html>
+</HTML>
