--- a/noc_site/WebContent/test2.htm
+++ b/noc_site/WebContent/test2.htm
@@ -8,36 +8,36 @@
 
 <style>
 .out {
-position:relative;
-background:#bbb;
-margin:10px auto;
-width:285px
+	position: relative;
+	background: #bbb;
+	margin: 10px auto;
+	width: 285px
 }
+
 .in {
-background:#fff;
-border:1px solid #555;
-padding:10px 5px;
-position:relative;
-top:-5px;
-left:-5px;
+	background: #fff;
+	border: 1px solid #555;
+	padding: 10px 5px;
+	position: relative;
+	top: -5px;
+	left: -5px;
 }
 </style>
 
 </head>
 
 <body>
-<h1 style="margin-bottom:20px;">演示</h1>
+<h1 style="margin-bottom: 20px;">演示</h1>
 <br />
 
-<div style="width:300px; margin-left:200px;">
+<div style="width: 300px; margin-left: 200px;">
 <div class="out">
-<div class="in" >
-这里是内容啊！</div>
+<div class="in">这里是内容啊！</div>
 </div>
 </div>
 
 
- 
+
 </body>
 </html>
 
